# cv_ml_project

./: .gitignore  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci-testing.yml  ci.yaml
app/: app.py  demo.py  pyproject.toml
app/edet_tflite/: demo.py  edet_tflite.py
app/tests/: test_edet_tflite.py
edet_tflite/: demo.py
efdet_tfl/: demo.py  demos.py
tests/: test_edet_tflite.py  test_efdet_tfl.py
