[tool.poetry]
name = "edet_tflite"
version = "0.1.0"
description = ""
authors = ["Alex Byzov <debesergopotes12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
opencv-python = "^4.6.0"
tensorflow = "^2.9.1"
streamlit = "^1.11.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
